src/styles/_components.search-box.scss
$border-radius: 2px;
$input-padding-y: .5rem;

.c-search-box {
  background-color: $white;
  align-items: stretch;
  display: flex;
  flex-direction: row;
  max-width: 600px;
  position: relative;
  width: 100%;
  height: 40px;
  margin: 0;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,.16), 0 0 0 1px rgba(0,0,0,.08);
}

  .c-search-box__select {
    padding: 0 $input-padding-y;
    border-radius: $border-radius 0 0 $border-radius;
    outline: none;
  }

  .c-search-box__input {
    width: 100%;
    border-radius: 0 $border-radius $border-radius 0;
    padding: 0 $input-padding-y;
    outline: none;
  }

  .c-search-box__results {
    $spacing: .25rem;

    background-color: $white;
    left: 0;
    padding: $spacing !important;
    position: absolute;
    top: calc(100% + #{$spacing});
    width: 100%;
    box-shadow: 0 3px 5px 0 rgba(0,0,0,.1);
    border-radius: 0 0 $border-radius $border-radius;

    li {
      cursor: pointer;
      padding: $spacing;

      &:hover {
        background-color: #DDE1E3;
      }
    }
  }

